Refactor kickPartyMember method for clarity and consistency
- Rename participantId to partyMemberId for better context
- Update checks for requesterId and party leader to use partyMemberId